fix github link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="header">
         Diffusion Life
         <span class="subtext">v.1.0</span>
-        <span class="author">made by <a href="https://github.com/harryhinch/artomata">@harryhinch 
+        <span class="author">made by <a href="https://github.com/harryhinch/diffusionlife">@harryhinch 
         <img alt="Transparent White GitHub Mark" width=20 height=20 src="
           data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAABUUlEQV
           Q4y52UQWvCQBCFVwXBWyj0ogfFFpX2VpCAggdTT55qi6dIRdoqCNqDCD2k9p+nb8osDMOmyWbhA3
