toroidal quadtree 2.0 upgrade

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <meta name="description" content=""">
   <meta name="author" content="Harry Hinch">
   <meta name="contact" content="https://github.com/harryhinch/">
-  <meta name="version" content="1.0.0">
+  <meta name="version" content="2.0.0">
 
-  <link rel="stylesheet" href="style.css?v=1.0.0">
+  <link rel="stylesheet" href="style.css?v=1.1.0">
+  <!-- Font Source https://b.agaric.net/page/agave -->
 
 </head>
 
@@ -19,7 +20,7 @@
     <div class="window">
       <div class="header">
         Diffusion Life
-        <span class="subtext">v.1.0</span>
+        <span class="subtext">v.2.0</span><span class="subtext" id="fps-counter">0FPS</span>
         <span class="author">made by <a href="https://github.com/harryhinch/diffusionlife">@harryhinch 
         <img alt="Transparent White GitHub Mark" width=20 height=20 src="
           data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAABUUlEQV
@@ -63,9 +64,9 @@
       </div>
     </div>
   </div>
-  <script src="lib.js?v=1.0.0"></script>
-  <script src="controls.js?v=1.0.0"></script>
-  <script src="simulation.js?v=1.0.0"></script>
-  <script src="main.js?v=1.0.0"></script>
+  <script src="lib.js?v=1.1.0"></script>
+  <script src="controls.js?v=1.1.0"></script>
+  <script src="simulation.js?v=2.0.0"></script>
+  <script src="main.js?v=1.1.0"></script>
 </body>
 </html>
